--- a/.github/workflows/clang-static-analysis.yml
+++ b/.github/workflows/clang-static-analysis.yml
@@ -1,56 +1,48 @@
-# Static analysis of subzero CORE via clang static analyzer
-name: "Clang Static Analysis"
-
-on:
-  push:
-    branches: [master]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [master]
-  schedule:
-    # Daily at 2am
-    - cron: '0 2 * * *'
-
 jobs:
   sacheck:
-    name: "Clang Static Analysis"
-    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -euxo pipefail {0}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.9]
-
+    name: Clang Static Analysis
+    runs-on: self-hosted
     steps:
-    - name: Checkout repository
+    - continue-on-error: true
+      name: Checkout repository
       uses: actions/checkout@v2
       with:
-        # We must fetch at least the immediate parents so that if this is
-        # a pull request then we can checkout the head.
         fetch-depth: 2
-        submodules: 'recursive'
-
-    - name: Set up Python ${{ matrix.python-version }}
+        submodules: recursive
+    - continue-on-error: true
+      name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - continue-on-error: true
+      name: Display Python version
+      run: 'python -c "import sys; print(sys.version)"
 
-    - name: Display Python version
-      run: |
-        python -c "import sys; print(sys.version)"
-
-    - name: Install build dependencies
+        '
+    - continue-on-error: true
+      name: Install build dependencies
       run: scripts/ubuntu_install_protobuf.sh
+    - continue-on-error: true
+      name: Install clang tools
+      run: 'sudo apt-get update
 
-    - name: Install clang tools
-      run: |
-        sudo apt-get update
         sudo apt-get install clang-tools-14 -y
+
         sudo ln -sf /usr/bin/clang-check-14 /usr/bin/clang-check
 
-    # Run static analysis
-    - name: Run clang static analysis
+        '
+    - continue-on-error: true
+      name: Run clang static analysis
       run: scripts/sa_check_core.sh
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+        - 3.9
+name: Clang Static Analysis
+on:
+  repository_dispatch:
+    types: trigger-ga___clang-static-analysis.yml
