--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,73 +1,55 @@
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-name: "CodeQL"
-
-on:
-  push:
-    branches: [master]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [master]
-  schedule:
-    - cron: '0 9 * * 1'
-
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
     permissions:
       security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['cpp', 'java']
-        python-version: [3.9]
-
+    runs-on: self-hosted
     steps:
-    - name: Checkout repository
+    - continue-on-error: true
+      name: Checkout repository
       uses: actions/checkout@v2
       with:
-        # We must fetch at least the immediate parents so that if this is
-        # a pull request then we can checkout the head.
         fetch-depth: 2
-        submodules: 'recursive'
-
-    - name: Set up Python ${{ matrix.python-version }}
+        submodules: recursive
+    - continue-on-error: true
+      name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - continue-on-error: true
+      name: Display Python version
+      run: 'python -c "import sys; print(sys.version)"
 
-    - name: Display Python version
-      run: |
-        python -c "import sys; print(sys.version)"
-
-    - if: ${{ matrix.language == 'cpp' }}
+        '
+    - continue-on-error: true
+      if: ${{ matrix.language == 'cpp' }}
       name: Install dependencies
       run: scripts/ubuntu_install_protobuf.sh
-
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
+    - continue-on-error: true
+      name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-        # If you wish to specify custom queries, you can do so here or in a config file.
-        # By default, queries listed here will override any specified in a config file.
-        # Prefix the list here with "+" to use these queries and those in the config file.
-        # queries: ./path/to/local/query, your-org/your-repo/queries@main
-
-    # Use Autobuild for languages other than C/C++
-    - if: ${{ matrix.language != 'cpp' }}
+    - continue-on-error: true
+      if: ${{ matrix.language != 'cpp' }}
       name: Autobuild
       uses: github/codeql-action/autobuild@v2
-
-    # Use custom build process for C/C++
-    - if: ${{ matrix.language == 'cpp' }}
+    - continue-on-error: true
+      if: ${{ matrix.language == 'cpp' }}
       name: Build Subzero Core (C/C++)
       run: scripts/build_core.sh
-
-    - name: Perform CodeQL Analysis
+    - continue-on-error: true
+      name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+    strategy:
+      fail-fast: false
+      matrix:
+        language:
+        - cpp
+        - java
+        python-version:
+        - 3.9
+name: CodeQL
+on:
+  repository_dispatch:
+    types: trigger-ga___codeql-analysis.yml
