--- a/.github/workflows/fuzzing-regression-test.yml
+++ b/.github/workflows/fuzzing-regression-test.yml
@@ -1,64 +1,58 @@
-# Subzero regression test for bugs discovered with fuzz testing
-name: "Fuzzing Regression Test"
-
-on:
-  push:
-    branches: [master]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [master]
-  schedule:
-    # Daily at 1am
-    - cron: '0 1 * * *'
-
 jobs:
   fuzzing-regression-test:
-    name: "Fuzzing Regression Test"
-    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -euxo pipefail {0}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.9]
-
+    name: Fuzzing Regression Test
+    runs-on: self-hosted
     steps:
-    - name: Checkout repository
+    - continue-on-error: true
+      name: Checkout repository
       uses: actions/checkout@v2
       with:
-        # We must fetch at least the immediate parents so that if this is
-        # a pull request then we can checkout the head.
         fetch-depth: 2
-        submodules: 'recursive'
-
-    - name: Set up Python ${{ matrix.python-version }}
+        submodules: recursive
+    - continue-on-error: true
+      name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - continue-on-error: true
+      name: Display Python version
+      run: 'python -c "import sys; print(sys.version)"
 
-    - name: Display Python version
-      run: |
-        python -c "import sys; print(sys.version)"
-
-    - name: Install dependencies
+        '
+    - continue-on-error: true
+      name: Install dependencies
       run: scripts/ubuntu_install_protobuf.sh
-
-    - name: Setup Clang
+    - continue-on-error: true
+      name: Setup Clang
       uses: egor-tensin/setup-clang@v1.4
       with:
-        version: latest
         platform: x64
+        version: latest
+    - continue-on-error: true
+      name: Build Subzero Core (ASAN+UBSAN+FUZZER)
+      run: 'export CC=`which clang`
 
-    # Build CORE with ASAN, UBSAN, and libfuzzer
-    - name: Build Subzero Core (ASAN+UBSAN+FUZZER)
-      run: |
-        export CC=`which clang`
         export CXX=`which clang++`
+
         scripts/build_core.sh -DENABLE_ASAN=ON -DENABLE_UBSAN=ON -DENABLE_FUZZER=ON
 
-    - name: Run Subzero CORE Fuzzing regression test
-      run: |
-        cd ${{ github.workspace }}
+        '
+    - continue-on-error: true
+      name: Run Subzero CORE Fuzzing regression test
+      run: 'cd ${{ github.workspace }}
+
         ./core/build/subzero_fuzzer-testnet ./core/fuzzing_regression_test_inputs/*
+
+        '
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+        - 3.9
+name: Fuzzing Regression Test
+on:
+  repository_dispatch:
+    types: trigger-ga___fuzzing-regression-test.yml
